Fixed z-index of title bar.

--- a/frontend/video.css
+++ b/frontend/video.css
@@ -20,7 +20,7 @@ body {
   font-size: 2rem;
   position: fixed;
   background: #000000BB;
-  z-index: 100;
+  z-index: 601;
 }
 
 .man_in_the_moon {
